<resources
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
    tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Walrus</string>
    <string name="update_notification_title">Important Notification</string>
    <string name="update_notification_message">Hi Alpha Testers! ❤️\n\nSome upcoming releases will contain new features such as extended device and card support and general bugfixes. However, future releases will most likely also contain database schema as well as architecture changes to an extent where it is difficult for us to correctly migrate databases across. This means any existing cards will be lost between future releases until we leave alpha or we notify otherwise.\n\nWe recommend you manually store card information in the meantime and apologize for any inconvenience caused!\n\n- Team Walrus</string>
    <string name="update_notification_neutral_button">OK</string>
    <string name="failed_bulk_reading">Failed while bulk reading cards:
        <xliff:g id="amount">%1$s</xliff:g>
    </string>
    <string name="bulk_read_cards_activity_name">Bulk Card Reads</string>
    <string name="stop_button">Stop</string>
    <string name="back_button">Back</string>
    <plurals name="num_cards_read">
        <item quantity="one">
            <xliff:g id="amount">%1$d</xliff:g>
            card read
        </item>
        <item quantity="other">
            <xliff:g id="amount">%1$d</xliff:g>
            cards read
        </item>
    </plurals>
    <string name="bulk_reading_cards">Bulk reading cards</string>
    <string name="device_gone">Disconnected device</string>
    <string name="bulk_read_notification_channel_name">Bulk card reads</string>
    <plurals name="bulk_reading_from">
        <item quantity="one">Reading cards from <xliff:g id="amount">%1$d</xliff:g> device
        </item>
        <item quantity="other">Reading cards from <xliff:g id="amount">%1$d</xliff:g> devices
        </item>
    </plurals>
    <string name="default_card_name">Unnamed Card</string>
    <string name="delete_button">Delete</string>
    <string name="view_card_data">View Data</string>
    <string name="write_card_data">Write</string>
    <string name="emulate_card_data">Emulate</string>
    <string name="read_card_data">Set Data</string>
    <string name="date_acquired">Date Acquired</string>
    <string name="location">Location</string>
    <string name="unknown">Unknown</string>
    <string name="notes">Notes</string>
    <string name="view_card">View Card</string>
    <string name="new_card">New Card</string>
    <string name="edit_card">Edit Card</string>
    <string name="set_template">Set Template</string>
    <string name="card_name_required">Card name is required</string>
    <string name="copy_of">Copy of
        <xliff:g id="name">%1$s</xliff:g>
    </string>
    <string name="delete_card">Delete card</string>
    <string name="delete_message">This action cannot be undone. Are you sure you want to continue?
    </string>
    <string name="cancel_button">Cancel</string>
    <string name="no_card_devices">No card devices connected</string>
    <string name="no_device_can_write">No connected device can write this kind of card</string>
    <string name="no_device_can_emulate">No connected device can emulate this kind of card</string>
    <string name="choose_card_type">Choose card type</string>
    <string name="discard_card_changes">Discard changes?</string>
    <string name="discard_bulk_read_changes">Discard bulk read card template?</string>
    <string name="discard_button">Discard</string>
    <string name="writing_card">Writing card</string>
    <string name="emulating_card">Emulating card</string>
    <string name="performing_operation">Performing operation</string>
    <string name="waiting_for_card">Waiting for card</string>
    <string name="no_card_data">Card has no card data</string>
    <string name="no_view_card_dialog">This type of card doesn\'t have a detailed view</string>
    <string name="edit_card_data_title">Manual <xliff:g id="card_data_class">%1$s</xliff:g> data
        entry
    </string>
    <string name="view_card_data_title">
        <xliff:g id="card_data_class">%1$s</xliff:g>
        data
    </string>
    <string name="read_description">Reading</string>
    <string name="write_description">Writing</string>
    <string name="failed_to_write">Failed to write card:
        <xliff:g id="error">%1$s</xliff:g>
    </string>
    <string name="failed_to_emulate">Failed to emulate card:
        <xliff:g id="error">%1$s</xliff:g>
    </string>
    <string name="failed_to_read">Failed to read card:
        <xliff:g id="error">%1$s</xliff:g>
    </string>
    <string name="failed_to_perform_operation">Failed to perform operation:
        <xliff:g id="error">%1$s</xliff:g>
    </string>
    <string name="version">Version Information</string>
    <string name="retrieving">Retrieving…</string>
    <string name="failed_get_version">Failed to get version:
        <xliff:g id="error">%1$s</xliff:g>
    </string>
    <string name="chameleon_mini_rev_g_activity_name" translatable="false">Chameleon Mini</string>
    <string name="chameleon_mini_rev_e_rebooted_activity_name" translatable="false">Chameleon Mini</string>
    <string name="chameleon_mini_rev_g" translatable="false">Rev.G</string>
    <string name="chameleon_mini_rev_e_rebooted" translatable="false">Rev.E Rebooted</string>
    <string name="idle">Idle</string>
    <string name="device_busy">Device is busy</string>
    <string name="reading">Reading</string>
    <string name="getting_version">Getting version</string>
    <string name="get_version_timeout">Timed out while getting version</string>
    <string name="getting_capabilities">Getting capabilities</string>
    <string name="device_is_gone">Device is gone</string>
    <string name="command_error">Unexpected response to <xliff:g id="command">%1$s</xliff:g> command:
        <xliff:g id="error">%2$s</xliff:g>
    </string>
    <string name="emulating">Emulating</string>
    <string name="warning">Warning!</string>
    <string name="delete_all_cards">All cards will be deleted. This action cannot be undone. Are you
        sure you want to continue?
    </string>
    <string name="all_cards_deleted">All cards deleted</string>
    <string name="devices_activity_name">Devices</string>
    <string name="device_has_no_settings">Device has no settings</string>
    <string name="tune_sweep">Sweep LF band</string>
    <string name="live_tune_activity_name">Antenna</string>
    <string name="live_tune_lf">LF antenna at %1$.2f kHz</string>
    <string name="live_tune_hf">HF antenna at 13.56 MHz</string>
    <string name="live_tune_voltage">%1$.3f V</string>
    <string name="live_tune_peak">Peak %1$.3f V</string>
    <string name="live_tune_measuring">Measuring. Press back, or the button on the Proxmark3,
        to stop.</string>
    <string name="live_tune_stopped">Stopped</string>
    <string name="live_tune_button_pressed">Stopped from the Proxmark3 button</string>
    <string name="bluetooth_devices_activity_name">Bluetooth devices</string>
    <string name="bluetooth_connect_device">Connect Bluetooth device</string>
    <string name="bluetooth_paired_devices">Paired devices</string>
    <string name="bluetooth_available_devices">Available devices</string>
    <string name="bluetooth_scan">Scan</string>
    <string name="bluetooth_stop_scan">Stop</string>
    <string name="bluetooth_scanning">Scanning\u2026</string>
    <string name="bluetooth_no_devices">No devices yet. Make sure the reader is powered on and
        its Bluetooth module is switched on, then tap Scan.</string>
    <string name="bluetooth_pair_hint">Pairing with %1$s. The Proxmark3 Blue Shark PIN is
        1234.</string>
    <string name="bluetooth_pairing">Pairing\u2026</string>
    <string name="bluetooth_pair_failed">Pairing with %1$s failed</string>
    <string name="bluetooth_connecting">Connecting to %1$s\u2026</string>
    <string name="bluetooth_connect_failed">Could not open a Bluetooth connection to the
        device</string>
    <string name="bluetooth_device_not_recognised">That Bluetooth device is not a reader Walrus
        knows how to talk to</string>
    <string name="bluetooth_permission_missing">Walrus does not have permission to use
        Bluetooth</string>
    <string name="bluetooth_permission_rationale">Walrus needs Bluetooth access to find and
        connect to your reader</string>
    <string name="bluetooth_disabled">Bluetooth is turned off</string>
    <string name="bluetooth_unsupported">This device has no Bluetooth adapter</string>
    <string name="bluetooth_forget">Forget remembered device</string>
    <string name="bluetooth_forgotten">Walrus will no longer reconnect automatically</string>
    <string name="bluetooth_remembered">Reconnects automatically</string>
    <string name="invalid_fixed_value">Invalid fixed value</string>
    <string name="hid_format">Format</string>
    <string name="hid_raw">Raw</string>
    <string name="hid_26_bit">HID 26-bit (H10301)</string>
    <string name="hid_34_bit">HID 34-bit (H10306)</string>
    <string name="hid_35_bit_corporate_1000">HID 35-bit Corporate 1000</string>
    <string name="hid_37_bit">HID 37-bit (H10302)</string>
    <string name="hid_37_bit_with_facility_code">HID 37-bit with Facility Code (H10304)</string>
    <string name="hid_48_bit_corporate_1000">HID 48-bit Corporate 1000</string>
    <string name="hid_data">Data (hex)</string>
    <string name="hid_facility_code">Facility Code</string>
    <string name="hid_card_number">Card Number</string>
    <string name="hid_format_autodetected">This format was autodetected</string>
    <string name="start">Start</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="duplicate">Duplicate</string>
    <string name="add_new_card">Add New Card</string>
    <string name="bulk_read_cards">Bulk Read Cards</string>
    <string name="devices">Devices</string>
    <string name="settings">Settings</string>
    <string name="search_cards">Search cards</string>
    <string name="setup_mifare_read">Setup MIFARE read</string>
    <string name="add">Add</string>
    <string name="read_steps">Read steps</string>
    <string name="invalid_parity">Invalid parity</string>
    <string name="choose_source">Choose source</string>
    <string name="choose_sink">Choose destination</string>
    <string name="choose_target">Choose target</string>
    <string name="manual_entry">Manual entry</string>
    <string name="bulk_read_settings_preference">Bulk Card Reading</string>
    <string name="bulk_read_vibrate_preference">Vibrate on card read</string>
    <string name="devices_settings_preference">Devices</string>
    <string name="on_device_connected_preference">Vibrate on device connect / disconnect</string>
    <string name="wallet_settings_preference">Wallet</string>
    <string name="delete_all_cards_preference">Delete all cards</string>
    <string name="about_settings_preference">About</string>
    <string name="open_source_preference">Open source licenses</string>
    <string name="card_slot_preference">Card Slot</string>
    <string name="card_slot_preference_message"><xliff:g>Chameleon Mini</xliff:g> card
        keySlot to be used for emulation
    </string>
    <string name="proxmark3_activity_name" translatable="false">Proxmark3</string>
    <string name="proxmark3" translatable="false">Proxmark3</string>
    <string name="tune">Tune</string>
    <string name="tune_lf">Tune LF</string>
    <string name="tune_hf">Tune HF</string>
    <string name="tuning_progress">Tuning…</string>
    <string name="failed_to_tune">Failed to tune:
        <xliff:g id="error">%1$s</xliff:g>
    </string>
    <string name="writing">Writing</string>
    <string name="write_card_timeout">Timed out while writing card</string>
</resources>