<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Daniel Underhay & Matthew Daley.
  ~
  ~ This file is part of Walrus.
  ~
  ~ Walrus is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Walrus is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Walrus.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/bulk_read_settings_preference">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_bulk_read_vibrate"
            android:title="@string/bulk_read_vibrate_preference"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/devices_settings_preference">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_on_device_connected_vibrate"
            android:title="@string/on_device_connected_preference"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/wallet_settings_preference">

        <com.bugfuzz.android.projectwalrus.card.ui.DeleteAllCardsPreference
            android:title="@string/delete_all_cards_preference"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about_settings_preference">

        <Preference
            android:key="open_source_licenses"
            android:title="@string/open_source_preference"/>

    </PreferenceCategory>

</PreferenceScreen>
